--- a/recipe-app/src/pages/shared/styles/inventory.css
+++ b/recipe-app/src/pages/shared/styles/inventory.css
@@ -28,7 +28,7 @@
     align-items: center;
     border-radius: 10px;
     padding: 5px;
-    margin: 0 30px;
+    /* margin: 0 30px; */
     justify-content: space-between;
 }
 
@@ -55,6 +55,9 @@
     outline: 0;
   }
 
+  .btn{
+    margin-right: 60px;
+  }
 
 .item-list {
     display: flex;
