--- a/recipe-app/src/pages/shared/styles/list.css
+++ b/recipe-app/src/pages/shared/styles/list.css
@@ -1,30 +1,48 @@
-@import url("https://fonts.googleapis.com/css?family=Cardo:400i|Rubik:400,700&display=swap");
-:root {
-  --d: 700ms;
-  --e: cubic-bezier(0.19, 1, 0.22, 1);
-  --font-sans: "Rubik", sans-serif;
-  --font-serif: "Cardo", serif;
-}
-
-.list_container {
-    display: grid;
-    grid-gap: 1rem;
-    padding: 1rem;
-    max-width: 1024px;
+.list {
+    width: 75vw;
     margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 20px;
+    margin-top: 50px;
 }
 
 .card {
-    position: relative;
     display: flex;
-    align-items: flex-end;
-    overflow: hidden;
-    padding: 1rem;
+    height: 50%;
+    max-width: 100%;
     width: 100%;
-    text-align: center;
-    color: whitesmoke;
-    background-color: whitesmoke;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1);
+    background-size: cover;
+    background-position: center;
+    cursor: zoom-in;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+  }
+
+  .list__card {
+    display: flex;
+    flex-wrap: wrap;
+    word-wrap: break-word;
+    background-color: #fff;
+    padding: 20px;
+    cursor:pointer;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    -moz-osx-font-smoothing: grayscale;
+    backface-visibility: hidden;
+    transform: translateZ(0);
+    transition: transform 0.25s ease-out;
+    -webkit-transition: transform 0.25s ease-out;
+    -moz-transition: transform 0.25s ease-out;
+    -ms-transition: transform 0.25s ease-out;
+    -o-transition: transform 0.25s ease-out;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
   }
 
   .title {
@@ -33,6 +51,10 @@
       font-size: 20px;
   }
   
-  .content p{
-      font-size: 20px;
+  .content{
+      padding-top: 20px;
+  }
+
+  .content p {
+    font-size: 16px;
   }
