--- a/recipe-app/src/pages/shared/styles/recipe.css
+++ b/recipe-app/src/pages/shared/styles/recipe.css
@@ -18,7 +18,7 @@
     margin: auto;
     min-height: initial;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 2px 10px;
-    padding-bottom: 55px;
+    padding-bottom: 40px;
 }
 
 .form__container--title{
@@ -43,15 +43,19 @@
 
 .form {
     margin: 0px auto;
-    width: 508px;
+    width: 500px;
 }
 
-.form > input {
-    margin-bottom: 40px;
+/* .form > input {
+    margin-bottom: 0px;
+} */
+
+.form__textinput {
+    margin-top: 20px;
 }
 
 textarea {
-    margin: 50px 0;
+    margin: 30px 0;
     min-height: 48px;
     width: 100%;
     background-color:rgb(255, 255, 255);
@@ -74,11 +78,10 @@ textarea {
     outline: currentcolor none medium;
     box-shadow: none;
     cursor: pointer;
-    margin-top: 10px;
     vertical-align: middle;
     text-align: center;
     background-color: rgb(230, 0, 35);
     color: rgb(255, 255, 255);
     width: 100%;
-    margin: 50px 0;
+    margin: 30px 0;
 }
